# avalokiteshvara

./: .gitignore  README.md  SCHEDULING_POLICIES.md  bot_data.pickle  demo_video_script.txt  demo_video_script2.txt  main.py  pyproject.toml  scheduling_policies_visual_guide.md  teleporter.py
controllers/arm/: arm.py
docs/: grouping_analysis.py  main.py  problem_description.md  step1_api_call.py  step2_plan_policy.py  step3_4_create_order_schedule.py  step5a_gant_chart.py  swagger.yaml
src/: __init__.py  api.py  api_explorer.py  failed_order.json  main.py  step2_plan_policy.py  step3_4_create_order_schedule.py  step5a_gant_chart.py  step6_telegram_bot.py  test_policies.py
src/ai_scheduler_helper/: __init__.py  gemini_replanner.py
src/process_factory_events/: __init__.py  server.py
src/real_time/: __init__.py  advance_pipleine.py  digital_twin.py  reschedule.py  robot.py
src/scheduler_logic/: __init__.py  ai_task.txt  constants.py  gantt.py  orchestrator.py  planning.py  scheduling.py
src/shared/: models.py
src/telegram_control/: __init__.py  __main__.py  ai_task.txt  api_client.py  bot.py  bugs.txt  formatters.py  keyboards.py  models.py  notifications.py
src/telegram_control/handlers/: __init__.py  common.py  factory.py  menu.py  onboarding.py  production.py  sales_orders.py  schedule.py
tests/: test_gemini_api.py  test_so005_conflict.py
worlds/: .digital_twin.wbproj  digital_twin.wbt
