[project]
name = "avalokiteshvara"
version = "0.1.0"
description = "NovaBoard Production Scheduling Agent — Arke Hackathon 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "google-genai>=1.0.0",
    "httpx>=0.27",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=20.0",
    "requests>=2.32.5",
]
